<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item

            android:id="@+id/jobFragment"
            android:icon="@drawable/ic_job"
            android:title="@string/action_job" />
        <item
            android:id="@+id/jobListFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/action_job_list" />
        <item
            android:id="@+id/aboutusFragment"
            android:icon="@drawable/ic_info"
            android:title="@string/action_about" />
    </group>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>

